# jwt-validation-nginx-module

./: .clang-format  CMakeLists.txt  Dockerfile  README.md  config  jwt_validator.c  jwt_validator.h  nginx.conf  ngx_jwt_validator_module.c
src/: config  ngx_jwt_validation.c
tests/: test_jwt.c
